src/main/java/com/example/armaria/errors/EquipamentAlreadyExistsException.java
package com.example.armaria.errors;

public class EquipamentAlreadyExistsException extends RuntimeException {
  public EquipamentAlreadyExistsException(String serialNumber) {
    super("Equipament com número de série já cadastrado: " + serialNumber);
  }
}
